--- a/docs/package.json
+++ b/docs/package.json
@@ -9,6 +9,8 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "element-ui": "^1.4.6",
+    "style-loader": "^0.18.2",
     "vue": "^2.4.3"
   },
   "devDependencies": {
