--- a/docs/package.json
+++ b/docs/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "element-ui": "^1.4.6",
     "style-loader": "^0.18.2",
-    "vue": "^2.4.3"
+    "vue": "^2.4.3",
+    "vue-constants": "^1.0.3"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
