--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
-/target/
-**/*.rs.bk
+.DS_Store
+node_modules/
+npm-debug.log
+yarn-error.log
+
+# Editor directories and files
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
