--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "file-loader": "^0.11.2",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
+    "uglifyjs-webpack-plugin": "^1.0.0-beta.2",
     "vue-loader": "^13.0.4",
     "vue-template-compiler": "^2.4.3",
     "webpack": "^3.5.6",
