--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -1,17 +1,24 @@
 [package]
 name = "eva-web"
-version = "0.0.1"
+version = "0.1.0"
 authors = ["Stijn Seghers <stijnseghers@gmail.com>"]
+edition = "2018"
+
+[lib]
+name = "eva"
+crate-type = ["cdylib"]
 
 [dependencies]
 chrono = { version = "0.4", features = ["serde"] }
-error-chain = "0.10"
-eva = { git = "https://github.com/Procrat/eva", branch = "web-integration" }
-libsqlite3-sys = { version = "0.8.1", features = ["bundled"] }
+console_error_panic_hook = "0.1"
+error-chain = "0.12"
+eva = { git = "https://github.com/Procrat/eva", default-features = false }
+futures-preview = { version = "0.3.0-alpha.9", features = ["compat"] }
+js-sys = "0.3"
+rand = { version = "0.6.0-pre.1", features = ["wasm-bindgen"] }
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
-
-[[bin]]
-name = "eva"
-path = "src/main.rs"
+wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
+wasm-bindgen-futures = "0.3"
+web-sys = { version = "0.3", features = ["console"] }
