--- a/package.json
+++ b/package.json
@@ -1,32 +1,74 @@
 {
   "name": "eva",
   "description": "Let algorithms decide your life.",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "author": "Stijn Seghers <stijnseghers@gmail.com>",
   "private": true,
+  "browserslist": "> 1%, not dead",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "dev": "webpack-dev-server --progress --config build/webpack.dev.js",
+    "build": "webpack --progress --hide-modules --config build/webpack.prod.js",
+    "test": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
+    "test-watch": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js",
+    "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
-    "element-ui": "^1.4.6",
-    "style-loader": "^0.18.2",
-    "vue": "^2.4.3",
+    "element-ui": "^1.4.13",
+    "pouchdb": "^7.0.0",
+    "vue": "^2.5.17",
     "vue-constants": "^1.0.3"
   },
   "devDependencies": {
-    "babel-core": "^6.0.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.0",
-    "cross-env": "^5.0.5",
-    "css-loader": "^0.28.7",
-    "file-loader": "^0.11.2",
-    "node-sass": "^4.5.3",
-    "sass-loader": "^6.0.6",
-    "uglifyjs-webpack-plugin": "^1.0.0-beta.2",
-    "vue-loader": "^13.0.4",
-    "vue-template-compiler": "^2.4.3",
-    "webpack": "^3.5.6",
-    "webpack-dev-server": "^2.8.1"
+    "@babel/core": "^7.1.5",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.1.5",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.4",
+    "babel-plugin-component": "^1.1.1",
+    "babel-plugin-istanbul": "^5.1.0",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
+    "chalk": "^2.1.0",
+    "clean-webpack-plugin": "^0.1.19",
+    "cross-env": "^5.2.0",
+    "css-loader": "^1.0.1",
+    "eslint": "^5.9.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-friendly-formatter": "^4.0.1",
+    "eslint-import-resolver-webpack": "^0.10.1",
+    "eslint-loader": "^2.1.1",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-vue": "^5.0.0-beta.3",
+    "file-loader": "^2.0.0",
+    "friendly-errors-webpack-plugin": "^1.7.0",
+    "html-webpack-plugin": "^3.2.0",
+    "karma": "^3.1.1",
+    "karma-chai": "^0.1.0",
+    "karma-chai-as-promised": "^0.1.2",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage": "^1.1.2",
+    "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.5",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "0.0.32",
+    "karma-webpack": "^4.0.0-rc.2",
+    "mini-css-extract-plugin": "^0.4.4",
+    "mocha": "^5.2.0",
+    "mocha-clean": "^1.0.0",
+    "node-notifier": "^5.3.0",
+    "node-sass": "^4.10.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "sass-loader": "^7.1.0",
+    "source-map-explorer": "^1.6.0",
+    "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^1.3.0",
+    "vue-loader": "^15.4.2",
+    "vue-template-compiler": "^2.5.17",
+    "webpack": "^4.25.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10",
+    "webpack-merge": "^4.1.4",
+    "webpack-multiline-sass": "0.0.1"
   }
 }
