--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -12,13 +12,17 @@ crate-type = ["cdylib"]
 chrono = { version = "0.4", features = ["serde"] }
 console_error_panic_hook = "0.1"
 error-chain = "0.12"
-eva = { git = "https://github.com/Procrat/eva", default-features = false }
-futures-preview = { version = "0.3.0-alpha.9", features = ["compat"] }
+futures-preview = { version = "=0.3.0-alpha.13", features = ["compat"] }
 js-sys = "0.3"
-rand = { version = "0.6.0-pre.1", features = ["wasm-bindgen"] }
+rand = { version = "0.6", features = ["wasm-bindgen"] }
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
 wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
 wasm-bindgen-futures = "0.3"
 web-sys = { version = "0.3", features = ["console"] }
+
+[dependencies.eva]
+git = "https://github.com/Procrat/eva"
+rev = "6d1074e"
+default-features = false
