--- a/package.json
+++ b/package.json
@@ -15,35 +15,35 @@
   "dependencies": {
     "element-ui": "^1.4.13",
     "pouchdb": "^7.0.0",
-    "vue": "^2.5.17",
+    "vue": "^2.6.8",
     "vue-constants": "^1.0.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.5",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/polyfill": "^7.0.0",
-    "@babel/preset-env": "^7.1.5",
+    "@babel/core": "^7.3.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/polyfill": "^7.2.5",
+    "@babel/preset-env": "^7.3.4",
     "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.4",
+    "babel-loader": "^8.0.5",
     "babel-plugin-component": "^1.1.1",
-    "babel-plugin-istanbul": "^5.1.0",
+    "babel-plugin-istanbul": "^5.1.1",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "chalk": "^2.1.0",
-    "clean-webpack-plugin": "^0.1.19",
+    "chalk": "^2.4.2",
+    "clean-webpack-plugin": "^2.0.0",
     "cross-env": "^5.2.0",
-    "css-loader": "^1.0.1",
-    "eslint": "^5.9.0",
+    "css-loader": "^2.1.1",
+    "eslint": "^5.15.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-friendly-formatter": "^4.0.1",
-    "eslint-import-resolver-webpack": "^0.10.1",
-    "eslint-loader": "^2.1.1",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-vue": "^5.0.0-beta.3",
-    "file-loader": "^2.0.0",
+    "eslint-import-resolver-webpack": "^0.11.0",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-vue": "^5.2.2",
+    "file-loader": "^3.0.1",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
-    "karma": "^3.1.1",
+    "karma": "^4.0.1",
     "karma-chai": "^0.1.0",
     "karma-chai-as-promised": "^0.1.2",
     "karma-chrome-launcher": "^2.2.0",
@@ -52,23 +52,23 @@
     "karma-mocha-reporter": "^2.2.5",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.32",
-    "karma-webpack": "^4.0.0-rc.2",
-    "mini-css-extract-plugin": "^0.4.4",
-    "mocha": "^5.2.0",
+    "karma-webpack": "^4.0.0-rc.6",
+    "mini-css-extract-plugin": "^0.5.0",
+    "mocha": "^6.0.2",
     "mocha-clean": "^1.0.0",
-    "node-notifier": "^5.3.0",
-    "node-sass": "^4.10.0",
+    "node-notifier": "^5.4.0",
+    "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "sass-loader": "^7.1.0",
-    "source-map-explorer": "^1.6.0",
+    "source-map-explorer": "^1.7.0",
     "style-loader": "^0.23.1",
-    "uglifyjs-webpack-plugin": "^1.3.0",
-    "vue-loader": "^15.4.2",
-    "vue-template-compiler": "^2.5.17",
-    "webpack": "^4.25.1",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10",
-    "webpack-merge": "^4.1.4",
+    "terser-webpack-plugin": "^1.2.3",
+    "vue-loader": "^15.7.0",
+    "vue-template-compiler": "^2.6.8",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.2.1",
+    "webpack-merge": "^4.2.1",
     "webpack-multiline-sass": "0.0.1"
   }
 }
