--- a/.travis.yml
+++ b/.travis.yml
@@ -35,18 +35,17 @@ script:
 
 before_deploy:
   - make release
-  - curl -sSfL 'https://cli.netlify.com/download/latest/linux' | tar xz
 
 deploy:
   - provider: script
     script: >
-      ./netlifyctl deploy
-      --site-id "$NETLIFY_SITE_ID"
-      --access-token "$NETLIFY_ACCESS_TOKEN"
-      $([ "$TRAVIS_BRANCH" != master ] && echo --draft)
-      --message "$TRAVIS_BRANCH"
-      --publish-directory ./dist ||
-      cat netlifyctl-debug.log
+      npm install netlify-cli -g &&
+      netlify deploy
+      --site "$NETLIFY_SITE_ID"
+      --auth "$NETLIFY_ACCESS_TOKEN"
+      $([ "$TRAVIS_BRANCH" == master ] && echo --prod)
+      --message "${TRAVIS_BRANCH} @${TRAVIS_COMMIT}: $TRAVIS_COMMIT_MESSAGE"
+      --dir dist # Keep this comment here; Travis CI appends an n otherwise
     skip_cleanup: true
     on:
       all_branches: true
