--- a/.travis.yml
+++ b/.travis.yml
@@ -31,10 +31,8 @@ install:
 
 script:
   - make test
-
-
-before_deploy:
   - make release
+
 
 deploy:
   - provider: script
@@ -43,12 +41,23 @@ deploy:
       netlify deploy
       --site "$NETLIFY_SITE_ID"
       --auth "$NETLIFY_ACCESS_TOKEN"
-      $([ "$TRAVIS_BRANCH" == master ] && echo --prod)
       --message "${TRAVIS_BRANCH} @${TRAVIS_COMMIT}: $TRAVIS_COMMIT_MESSAGE"
       --dir dist # Keep this comment here; Travis CI appends an n otherwise
     skip_cleanup: true
     on:
       all_branches: true
+      condition: $TRAVIS_BRANCH != master
+
+  - provider: script
+    script: >
+      npm install netlify-cli -g &&
+      netlify deploy --prod
+      --site "$NETLIFY_SITE_ID"
+      --auth "$NETLIFY_ACCESS_TOKEN"
+      --message "${TRAVIS_BRANCH} @${TRAVIS_COMMIT}: $TRAVIS_COMMIT_MESSAGE"
+      --dir dist # Keep this comment here; Travis CI appends an n otherwise
+    skip_cleanup: true
+
   - provider: pages
     github_token: $GITHUB_TOKEN
     local_dir: dist
