--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "karma-spec-reporter": "0.0.32",
     "karma-webpack": "^4.0.0-rc.6",
     "mini-css-extract-plugin": "^0.5.0",
-    "mocha": "^6.0.2",
+    "mocha": "^6.1.4",
     "mocha-clean": "^1.0.0",
     "node-notifier": "^5.4.0",
     "node-sass": "^4.11.0",
@@ -69,6 +69,7 @@
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.2.1",
+    "webpack-filter-warnings-plugin": "^1.2.1",
     "webpack-merge": "^4.2.1",
     "webpack-multiline-sass": "0.0.1"
   }
