Use PostCSS + autoprefixer for better x-browser support

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/polyfill": "^7.4.0",
     "@babel/preset-env": "^7.4.2",
+    "autoprefixer": "^9.6.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
     "babel-plugin-component": "^1.1.1",
@@ -62,6 +63,7 @@
     "node-notifier": "^5.4.0",
     "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "postcss-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
     "source-map-explorer": "^1.8.0",
     "style-loader": "^0.23.1",
