--- a/package.json
+++ b/package.json
@@ -13,66 +13,66 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
-    "color": "^3.1.1",
-    "element-ui": "^2.6.3",
-    "pouchdb": "^7.0.0",
-    "pouchdb-find": "^7.0.0",
+    "color": "^3.1.2",
+    "element-ui": "^2.11.1",
+    "pouchdb": "^7.1.1",
+    "pouchdb-find": "^7.1.1",
     "vue": "^2.6.10",
     "vue-constants": "^1.0.3",
-    "vue-router": "^3.0.6"
+    "vue-router": "^3.0.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.0",
+    "@babel/core": "^7.5.5",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/polyfill": "^7.4.0",
-    "@babel/preset-env": "^7.4.2",
-    "autoprefixer": "^9.6.0",
-    "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.5",
+    "@babel/preset-env": "^7.5.5",
+    "autoprefixer": "^9.6.1",
+    "babel-eslint": "^10.0.2",
+    "babel-loader": "^8.0.6",
     "babel-plugin-component": "^1.1.1",
-    "babel-plugin-istanbul": "^5.1.1",
+    "babel-plugin-istanbul": "^5.2.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "chalk": "^2.4.2",
-    "clean-webpack-plugin": "^2.0.1",
+    "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^5.2.0",
-    "css-loader": "^2.1.1",
-    "eslint": "^5.15.3",
-    "eslint-config-airbnb-base": "^13.1.0",
+    "css-loader": "^3.1.0",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.2.0",
     "eslint-friendly-formatter": "^4.0.1",
-    "eslint-import-resolver-webpack": "^0.11.0",
-    "eslint-loader": "^2.1.2",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-vue": "^5.2.2",
-    "file-loader": "^3.0.1",
+    "eslint-import-resolver-webpack": "^0.11.1",
+    "eslint-loader": "^2.2.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-vue": "^5.2.3",
+    "file-loader": "^4.1.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
-    "karma": "^4.0.1",
+    "karma": "^4.2.0",
     "karma-chai": "^0.1.0",
     "karma-chai-as-promised": "^0.1.2",
-    "karma-chrome-launcher": "^2.2.0",
+    "karma-chrome-launcher": "^3.0.0",
     "karma-coverage": "^1.1.2",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.5",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.32",
-    "karma-webpack": "^4.0.0-rc.6",
-    "mini-css-extract-plugin": "^0.5.0",
-    "mocha": "^6.1.4",
+    "karma-webpack": "^4.0.2",
+    "mini-css-extract-plugin": "^0.8.0",
+    "mocha": "^6.2.0",
     "mocha-clean": "^1.0.0",
     "node-notifier": "^5.4.0",
-    "node-sass": "^4.11.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "node-sass": "^4.12.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
-    "source-map-explorer": "^1.8.0",
+    "source-map-explorer": "^2.0.1",
     "style-loader": "^0.23.1",
-    "terser-webpack-plugin": "^1.2.3",
-    "vue-loader": "^15.7.0",
+    "terser-webpack-plugin": "^1.3.0",
+    "vue-loader": "^15.7.1",
     "vue-template-compiler": "^2.6.10",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.2.1",
+    "webpack": "^4.38.0",
+    "webpack-cli": "^3.3.6",
+    "webpack-dev-server": "^3.7.2",
     "webpack-filter-warnings-plugin": "^1.2.1",
     "webpack-merge": "^4.2.1",
     "webpack-multiline-sass": "0.0.1"
