--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   },
   "dependencies": {
     "color": "^3.1.2",
+    "core-js": "^2.6.9",
     "element-ui": "^2.11.1",
     "fast-text-encoding": "^1.0.0",
     "pouchdb": "^7.1.1",
     "pouchdb-find": "^7.1.1",
+    "regenerator-runtime": "^0.13.3",
     "vue": "^2.6.10",
     "vue-constants": "^1.0.3",
     "vue-router": "^3.0.7"
@@ -25,7 +27,6 @@
   "devDependencies": {
     "@babel/core": "^7.5.5",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/polyfill": "^7.4.0",
     "@babel/preset-env": "^7.5.5",
     "autoprefixer": "^9.6.1",
     "babel-eslint": "^10.0.2",
