CI: improve caching
- Travis has improved it's cache support for Rust, so ~/.rustup is now
  cached by default.
- Even though it automatically caches ./target, ours is placed at
  ./backend/target.
- `npm install` time can be reduced by also caching ~/.npm and ~/.nvm

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,10 @@ rust: nightly-2019-06-20
 cache:
   - cargo: true
   - directories:
-    - $HOME/.rustup
+    - backend/target
     - node_modules
+    - "$TRAVIS_HOME/.npm"
+    - "$TRAVIS_HOME/.nvm"
 
 
 # Install same version of wasm-bindgen-cli as of wasm-bindgen in Cargo.lock
