Use new #[wasm_bindgen] for async fns

--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -11,7 +11,7 @@ crate-type = ["cdylib"]
 [dependencies]
 chrono = { version = "0.4", features = ["serde"] }
 console_error_panic_hook = "0.1"
-derive_more = { version = "0.99", default-features = false, features = ["from"] }
+derive_more = { version = "0.99", default-features = false, features = ["from", "into"] }
 failure = "0.1"
 futures = "0.3"
 js-sys = "0.3"
