Update JS dependencies

--- a/.babelrc
+++ b/.babelrc
@@ -2,7 +2,7 @@
   "presets": [
     ["@babel/preset-env", {
       "useBuiltIns": "usage",
-      "corejs": 2,
+      "corejs": 3
     }]
   ],
   "plugins": [
