--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.2",
     "css-loader": "^3.5.3",
+    "cssnano-preset-advanced": "^4.0.7",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-friendly-formatter": "^4.0.1",
