--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "webpack --progress --hide-modules --config build/webpack.prod.js",
     "test": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "test-watch": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js",
-    "lint": "eslint --ext .js,.vue src"
+    "lint": "eslint --ext .js,.vue src",
+    "analyze": "webpack --progress --config build/webpack.analyze.js"
   },
   "dependencies": {
     "color": "^3.1.2",
@@ -72,6 +73,7 @@
     "vue-loader": "^15.9.2",
     "vue-template-compiler": "^2.6.11",
     "webpack": "^4.43.0",
+    "webpack-bundle-analyzer": "^3.7.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3",
     "webpack-filter-warnings-plugin": "^1.2.1",
