--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "mocha-clean": "^1.0.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
+    "postcss-normalize": "^9.0.0",
     "sass": "^1.32.13",
     "sass-loader": "^10.1.1",
     "source-map-explorer": "^2.4.2",
