--- a/package.json
+++ b/package.json
@@ -64,10 +64,10 @@
     "mini-css-extract-plugin": "^0.9.0",
     "mocha": "^7.1.2",
     "mocha-clean": "^1.0.0",
-    "node-sass": "^4.14.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
-    "sass-loader": "^8.0.2",
+    "sass": "^1.32.13",
+    "sass-loader": "^10.1.1",
     "source-map-explorer": "^2.4.2",
     "style-loader": "^1.2.1",
     "terser-webpack-plugin": "^3.0.0",
