--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^6.4.1",
     "cross-env": "^7.0.2",
     "css-loader": "^3.5.3",
     "cssnano-preset-advanced": "^4.0.7",
