Update JS dependencies but staying at Webpack v4

--- a/package.json
+++ b/package.json
@@ -6,79 +6,79 @@
   "private": true,
   "browserslist": "> 1%, not dead",
   "scripts": {
-    "dev": "webpack-dev-server --progress --config build/webpack.dev.js",
-    "build": "webpack --progress --hide-modules --config build/webpack.prod.js",
+    "dev": "webpack serve --progress --config build/webpack.dev.js",
+    "build": "webpack --progress --config build/webpack.prod.js",
     "test": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "test-watch": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js",
     "lint": "eslint --ext .js,.vue src",
     "analyze": "webpack --progress --config build/webpack.analyze.js"
   },
   "dependencies": {
-    "color": "^3.1.2",
-    "core-js": "^3.6.5",
-    "element-ui": "^2.13.1",
-    "fast-text-encoding": "^1.0.2",
-    "pouchdb": "^7.2.1",
-    "pouchdb-find": "^7.2.1",
-    "regenerator-runtime": "^0.13.5",
-    "vue": "^2.6.11",
+    "color": "^3.2.1",
+    "core-js": "^3.17.3",
+    "element-ui": "^2.15.6",
+    "fast-text-encoding": "^1.0.3",
+    "pouchdb": "^7.2.2",
+    "pouchdb-find": "^7.2.2",
+    "regenerator-runtime": "^0.13.9",
+    "vue": "^2.6.14",
     "vue-constants": "^1.0.3",
-    "vue-gtag": "^1.6.2",
-    "vue-router": "^3.1.6"
+    "vue-gtag": "^1.16.1",
+    "vue-router": "^3.5.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.6",
+    "@babel/core": "^7.15.5",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.9.6",
-    "autoprefixer": "^9.7.6",
+    "@babel/preset-env": "^7.15.6",
+    "autoprefixer": "^10.3.4",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.1.0",
+    "babel-loader": "^8.2.2",
     "babel-plugin-component": "^1.1.1",
     "babel-plugin-istanbul": "^6.0.0",
-    "chai": "^4.2.0",
+    "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
-    "clean-webpack-plugin": "^3.0.0",
+    "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^6.4.1",
-    "cross-env": "^7.0.2",
-    "css-loader": "^3.5.3",
-    "cssnano-preset-advanced": "^4.0.7",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.1.0",
+    "cross-env": "^7.0.3",
+    "css-loader": "^5.2.7",
+    "cssnano-preset-advanced": "^5.1.4",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
     "eslint-friendly-formatter": "^4.0.1",
-    "eslint-import-resolver-webpack": "^0.12.1",
+    "eslint-import-resolver-webpack": "^0.13.1",
     "eslint-loader": "^4.0.2",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "file-loader": "^6.0.0",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-vue": "^7.17.0",
+    "file-loader": "^6.2.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
-    "html-webpack-plugin": "^4.3.0",
-    "karma": "^5.0.4",
+    "html-webpack-plugin": "^4.5.1",
+    "karma": "^6.3.4",
     "karma-chai": "^0.1.0",
     "karma-chai-as-promised": "^0.1.2",
     "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage": "^2.0.2",
+    "karma-coverage": "^2.0.3",
     "karma-mocha": "^2.0.1",
     "karma-mocha-reporter": "^2.2.5",
-    "karma-sourcemap-loader": "^0.3.7",
+    "karma-sourcemap-loader": "^0.3.8",
     "karma-spec-reporter": "0.0.32",
     "karma-webpack": "^4.0.2",
-    "mini-css-extract-plugin": "^0.9.0",
-    "mocha": "^7.1.2",
+    "mini-css-extract-plugin": "^1.6.2",
+    "mocha": "^9.1.1",
     "mocha-clean": "^1.0.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "postcss-loader": "^3.0.0",
-    "postcss-normalize": "^9.0.0",
-    "sass": "^1.32.13",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
+    "postcss-loader": "^4.2.0",
+    "postcss-normalize": "^10.0.0",
+    "sass": "^1.39.2",
     "sass-loader": "^10.1.1",
-    "source-map-explorer": "^2.4.2",
-    "style-loader": "^1.2.1",
+    "source-map-explorer": "^2.5.2",
+    "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^3.0.0",
-    "vue-loader": "^15.9.2",
-    "vue-template-compiler": "^2.6.11",
+    "vue-loader": "^15.9.8",
+    "vue-template-compiler": "^2.6.14",
     "webpack": "^4.43.0",
-    "webpack-bundle-analyzer": "^3.7.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3",
+    "webpack-bundle-analyzer": "^4.4.2",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.2.0",
     "webpack-filter-warnings-plugin": "^1.2.1",
     "webpack-merge": "^4.2.2",
     "webpack-multiline-sass": "0.0.1"
