Update to webpack 5

--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
   "scripts": {
     "dev": "webpack serve --progress --config build/webpack.dev.js",
     "build": "webpack --progress --config build/webpack.prod.js",
-    "test": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
-    "test-watch": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js",
+    "test": "karma start test/unit/karma.conf.js --single-run",
+    "test-watch": "karma start test/unit/karma.conf.js",
     "lint": "eslint --ext .js,.vue src",
     "analyze": "webpack --progress --config build/webpack.analyze.js"
   },
   "dependencies": {
-    "color": "^3.2.1",
+    "color": "^4.0.1",
     "core-js": "^3.17.3",
     "element-ui": "^2.15.6",
     "fast-text-encoding": "^1.0.3",
@@ -30,6 +30,7 @@
     "@babel/core": "^7.15.5",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.15.6",
+    "@soda/friendly-errors-webpack-plugin": "^1.8.0",
     "autoprefixer": "^10.3.4",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
@@ -37,10 +38,10 @@
     "babel-plugin-istanbul": "^6.0.0",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
-    "clean-webpack-plugin": "^4.0.0",
-    "copy-webpack-plugin": "^6.4.1",
+    "copy-webpack-plugin": "^9.0.1",
     "cross-env": "^7.0.3",
-    "css-loader": "^5.2.7",
+    "css-loader": "^6.2.0",
+    "css-minimizer-webpack-plugin": "3.0.2",
     "cssnano-preset-advanced": "^5.1.4",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
@@ -48,10 +49,8 @@
     "eslint-import-resolver-webpack": "^0.13.1",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-vue": "^7.17.0",
-    "file-loader": "^6.2.0",
-    "friendly-errors-webpack-plugin": "^1.7.0",
-    "html-webpack-plugin": "^4.5.1",
+    "eslint-plugin-vue": "^7.18.0",
+    "html-webpack-plugin": "^5.3.2",
     "karma": "^6.3.4",
     "karma-chai": "^0.1.0",
     "karma-chai-as-promised": "^0.1.2",
@@ -61,26 +60,22 @@
     "karma-mocha-reporter": "^2.2.5",
     "karma-sourcemap-loader": "^0.3.8",
     "karma-spec-reporter": "0.0.32",
-    "karma-webpack": "^4.0.2",
-    "mini-css-extract-plugin": "^1.6.2",
+    "karma-webpack": "^5.0.0",
+    "mini-css-extract-plugin": "^2.3.0",
     "mocha": "^9.1.1",
     "mocha-clean": "^1.0.0",
-    "optimize-css-assets-webpack-plugin": "^6.0.1",
-    "postcss-loader": "^4.2.0",
-    "postcss-normalize": "^10.0.0",
-    "sass": "^1.39.2",
-    "sass-loader": "^10.1.1",
+    "postcss-loader": "^6.1.1",
+    "postcss-normalize": "^10.0.1",
+    "sass": "^1.41.1",
+    "sass-loader": "^12.1.0",
     "source-map-explorer": "^2.5.2",
-    "style-loader": "^2.0.0",
-    "terser-webpack-plugin": "^3.0.0",
+    "style-loader": "^3.2.1",
     "vue-loader": "^15.9.8",
     "vue-template-compiler": "^2.6.14",
-    "webpack": "^4.43.0",
+    "webpack": "^5.53.0",
     "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.2.0",
-    "webpack-filter-warnings-plugin": "^1.2.1",
-    "webpack-merge": "^4.2.2",
-    "webpack-multiline-sass": "0.0.1"
+    "webpack-dev-server": "^4.2.1",
+    "webpack-merge": "^4.2.2"
   }
 }
