--- a/package.json
+++ b/package.json
@@ -10,72 +10,69 @@
     "build": "webpack --progress --config build/webpack.prod.js",
     "test": "karma start test/unit/karma.conf.js --single-run",
     "test-watch": "karma start test/unit/karma.conf.js",
-    "lint": "eslint --ext .js,.vue src",
+    "lint": "eslint --ext .js,.vue src test",
     "analyze": "webpack --progress --config build/webpack.analyze.js"
   },
   "dependencies": {
-    "color": "^4.0.1",
-    "core-js": "^3.19.0",
-    "element-ui": "^2.15.6",
-    "fast-text-encoding": "^1.0.3",
-    "pouchdb": "^7.2.2",
-    "pouchdb-find": "^7.2.2",
-    "regenerator-runtime": "^0.13.9",
-    "vue": "^2.6.14",
+    "color": "^4.2.3",
+    "core-js": "^3.23.5",
+    "element-ui": "^2.15.9",
+    "fast-text-encoding": "^1.0.4",
+    "pouchdb": "^7.3.0",
+    "pouchdb-find": "^7.3.0",
+    "vue": "^2.7.7",
     "vue-constants": "^1.0.3",
     "vue-gtag": "^1.16.1",
     "vue-router": "^3.5.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.0",
+    "@babel/core": "^7.18.9",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.16.0",
-    "@soda/friendly-errors-webpack-plugin": "^1.8.0",
-    "autoprefixer": "^10.4.0",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.2.3",
+    "@babel/preset-env": "^7.18.9",
+    "@soda/friendly-errors-webpack-plugin": "^1.8.1",
+    "autoprefixer": "^10.4.7",
+    "babel-loader": "^8.2.5",
     "babel-plugin-component": "^1.1.1",
     "babel-plugin-istanbul": "^6.1.1",
-    "chai": "^4.3.4",
+    "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
-    "copy-webpack-plugin": "^9.0.1",
+    "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^7.0.3",
-    "css-loader": "^6.5.0",
-    "css-minimizer-webpack-plugin": "3.1.1",
-    "cssnano-preset-advanced": "^5.1.4",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb-base": "^14.2.1",
+    "css-loader": "^6.7.1",
+    "css-minimizer-webpack-plugin": "4.0.0",
+    "cssnano-preset-advanced": "^5.3.8",
+    "eslint": "^8.20.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-import-resolver-webpack": "^0.13.2",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-vue": "^8.0.3",
-    "eslint-webpack-plugin": "^3.1.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-vue": "^9.2.0",
+    "eslint-webpack-plugin": "^3.2.0",
     "html-webpack-plugin": "^5.5.0",
-    "karma": "^6.3.6",
+    "karma": "^6.4.0",
     "karma-chai": "^0.1.0",
     "karma-chai-as-promised": "^0.1.2",
-    "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage": "^2.0.3",
+    "karma-chrome-launcher": "^3.1.1",
+    "karma-coverage": "^2.2.0",
     "karma-mocha": "^2.0.1",
     "karma-mocha-reporter": "^2.2.5",
     "karma-sourcemap-loader": "^0.3.8",
-    "karma-spec-reporter": "0.0.32",
+    "karma-spec-reporter": "0.0.34",
     "karma-webpack": "^5.0.0",
-    "mini-css-extract-plugin": "^2.4.3",
-    "mocha": "^9.1.3",
+    "mini-css-extract-plugin": "^2.6.1",
+    "mocha": "^10.0.0",
     "mocha-clean": "^1.0.0",
-    "postcss-loader": "^6.2.0",
+    "postcss-loader": "^7.0.1",
     "postcss-normalize": "^10.0.1",
-    "sass": "^1.43.4",
-    "sass-loader": "^12.3.0",
+    "sass": "^1.53.0",
+    "sass-loader": "^13.0.2",
     "source-map-explorer": "^2.5.2",
     "style-loader": "^3.3.1",
-    "vue-loader": "^15.9.8",
-    "vue-template-compiler": "^2.6.14",
-    "webpack": "^5.61.0",
+    "vue-loader": "^15.10.0",
+    "webpack": "^5.73.0",
     "webpack-bundle-analyzer": "^4.5.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.4.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.3",
     "webpack-merge": "^4.2.2"
   }
 }
