--- a/package.json
+++ b/package.json
@@ -14,16 +14,17 @@
     "analyze": "webpack --progress --config build/webpack.analyze.js"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.0.6",
     "color": "^4.2.3",
     "core-js": "^3.23.5",
-    "element-ui": "^2.15.9",
+    "element-plus": "^2.2.9",
     "fast-text-encoding": "^1.0.4",
     "pouchdb": "^7.3.0",
     "pouchdb-find": "^7.3.0",
-    "vue": "^2.7.7",
+    "vue": "^3.2.37",
     "vue-constants": "^1.0.3",
-    "vue-gtag": "^1.16.1",
-    "vue-router": "^3.5.3"
+    "vue-gtag": "^2.0.1",
+    "vue-router": "^4.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.18.9",
@@ -39,7 +40,7 @@
     "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
-    "css-minimizer-webpack-plugin": "4.0.0",
+    "css-minimizer-webpack-plugin": "^4.0.0",
     "cssnano-preset-advanced": "^5.3.8",
     "eslint": "^8.20.0",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -57,7 +58,7 @@
     "karma-mocha": "^2.0.1",
     "karma-mocha-reporter": "^2.2.5",
     "karma-sourcemap-loader": "^0.3.8",
-    "karma-spec-reporter": "0.0.34",
+    "karma-spec-reporter": "^0.0.34",
     "karma-webpack": "^5.0.0",
     "mini-css-extract-plugin": "^2.6.1",
     "mocha": "^10.0.0",
@@ -68,7 +69,7 @@
     "sass-loader": "^13.0.2",
     "source-map-explorer": "^2.5.2",
     "style-loader": "^3.3.1",
-    "vue-loader": "^15.10.0",
+    "vue-loader": "^17.0.0",
     "webpack": "^5.73.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.10.0",
